Atualiza o popup.html para exibir mensagem de status da extensão e remove conteúdo de erro

--- a/modjus-extension/popup.html
+++ b/modjus-extension/popup.html
@@ -1,23 +1,16 @@
-<!-- popup.html -->
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erro</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Referencia o CSS -->
+  <meta charset="UTF-8">
+  <title>SEI - Modjus</title>
+  <style>
+    body { font-family: sans-serif; padding: 10px; width: 250px; }
+    h3 { margin-top: 0; }
+  </style>
 </head>
 <body>
-    <div id="error-modal" class="modal">
-        <div class="modal-content">
-            <h2>Ocorreu um erro!</h2>
-            <p id="error-message">Um erro aconteceu, por favor tente novamente mais tarde.</p>
-            <button id="close-btn">Fechar</button>
-            <button id="details-btn">Mais detalhes</button>
-            <div id="error-details" class="error-details" style="display: none;">
-                <pre id="detailed-message"></pre>
-            </div>
-        </div>
-    </div>
+  <h3>SEI - Modjus Extension</h3>
+  <p>A extensão está ativa e pronta para uso no SEI.</p>
 </body>
 </html>
+
